# wiki

./: .env.bstack  .env.credentials  .env.local_emulator  .env.local_real_device  .gitignore  README.md  project.py  pyproject.toml
tests/: conftest.py
tests/android_app/: test_onboarding_screen.py  test_wikipedia.py
utils/: __init__.py  allure.py  path.py
wiki/pages/: main_page.py  onboarding_screen_page.py
